--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "bin": {
-    "i18n-scan": "./dist/index.js"
+    "i18n-scan": "dist/index.js"
   },
   "files": [
     "dist/",
@@ -19,7 +19,6 @@
     "test": "npm run build && node dist/index.js example/src"
   },
   "dependencies": {
-    
     "commander": "^11.1.0",
     "@babel/parser": "^7.23.0",
     "@babel/traverse": "^7.23.0",
@@ -31,7 +30,14 @@
     "typescript": "^5.0.0",
     "tsx": "^4.0.0"
   },
-  "keywords": ["i18n", "jsx", "react", "typescript", "cli", "babel"],
+  "keywords": [
+    "i18n",
+    "jsx",
+    "react",
+    "typescript",
+    "cli",
+    "babel"
+  ],
   "author": "",
   "license": "MIT",
   "engines": {
